auth and smtp password reset request
